# Autonomous_Vehicle_Simulation

./: README.md
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: GetPath.srv
rc_car/: CMakeLists.txt  package.xml
rc_car/config/: bicycle_steering_controller.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
rc_car/description/: Traxxes_2DOF.xacro  camera.xacro  depricated_Traxxes.xacro  ground_truth.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  ros2_control_bicycle.xacro
rc_car/launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py  launch_rviz_real_robot.py  launch_sim.launch.py  launch_sim_bicycle.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  optitrack_map_server.launch.py  py_navigation.launch.py  rplidar.launch.py  rsp.launch.py  wall_following.launch.py
rc_car/maps/maze_1/: maze1_map.data  maze1_map.pgm  maze1_map.yaml
rc_car/maps/race4/: race4.pgm  race4.yaml
rc_car/paths/: path_maze_meter_sim.npy
rc_car/rviz_config/: localization.rviz  map_config_new.rviz  rviz_map_maze1.rviz  rviz_real_robot.rviz
rc_car/scripts/: .py  AStar_python_interface.py  Dubin_Code.py  Get_map_client.py  KINORRT_Star_python_interdace.py  PID_wall_following.py  PathPlanning_client.py  PathPlanning_service.py  Path_Tracking.py  PurePursuit_python_interface.py  RRT_Star_python_interdace.py  __teleop_joy_custom_ps4.py  _path_planning.py  _py_KinoRRT_Crowd_Navigation.py  _py_RRT.py  _py_RRT_Star.py  a_star.py  circle_drive_steering_calibration.py  get_map_client.py  inverse_odometry.py  inverse_twist.py  odom_ground_truth.py  odom_publisher_bicycle.py  odometry.py  optitrack_map_to_odom_publisher.py  path_planning.py  py_AStar.py  py_KinoRRT.py  py_KinoRRT_Star.py  py_PRM.py  py_PurePursuit.py  py_PurePursuit_intersect.py  py_RRT.py  py_RRT_Star.py  py_Utils.py  py_car_consts.py  py_car_simulator.py  py_path_loops_generator.py  py_simulator.py  ros_Get_map_client.py  (+12 more)
rc_car/worlds/: maze1.world  wall_following  wall_following.world
